syntax = "proto3";

package ru.otus.generated;

option java_multiple_files = true;

message RequestMessage {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message ResponseMessage {
    int64 value = 1;
}


message Empty {}

service RemoteDBService {
    rpc requestNumbers(RequestMessage) returns (stream ResponseMessage);
}
